1-deployment/service-energy-1.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: energy-service
  labels:
    app: energy
spec:
  ports:
  - port: 3838
    targetPort: 80
    protocol: TCP
  selector:
    app: energy
